[package]
authors = ["Thomas Sieverding <Thomas@bajix.com>"]
edition = "2021"
name = "swap-queue"
version = "1.1.0"
description = "A lock-free thread-owned queue whereby tasks are taken by stealers in entirety via buffer swapping"
readme = "./README.md"
license = "MIT"
repository = "https://github.com/Bajix/swap-queue-rs/"
exclude = ["/target/criterion/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cache-padded = "1.2.0"

[lib]
doctest = false
bench = false

[dev-dependencies]
criterion = { version = "0.3.5", features = ["async_tokio", "html_reports"] }
crossbeam-deque = "0.8.1"
flume = "0.10.13"
futures = "0.3.21"
jemallocator = "0.5.0"
tokio = { version = "1", features = ["sync", "rt", "macros"] }

[[bench]]
name = "benchmarks"
path = "benches/bench.rs"
harness = false
doc = false

[profile.bench]
lto = "fat"
opt-level = 3
codegen-units = 1

[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1
panic = "abort"
