[package]
authors = ["Thomas Sieverding <Thomas@bajix.com>"]
edition = "2021"
name = "swap-queue"
version = "1.0.1"
description = "A lock-free thread-owned queue whereby tasks are taken by stealers in entirety via buffer swapping"
readme = "./README.md"
license = "MIT"
repository = "https://github.com/Bajix/swap-queue-rs/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8.1"
futures = "0.3.17"
tokio = { version = "1", features = ["sync", "rt", "macros"] }

[target.'cfg(loom)'.dependencies]
loom = "0.5.2"

[lib]
doctest = false

[dev-dependencies]
criterion = { version = "0.3.5", features = ["async_tokio"] }
flume = "0.10.9"
jemallocator = "0.3.2"

[[bench]]
name = "benchmarks"
path = "benches/benchmarks.rs"
harness = false

[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1
panic = "abort"
